# base-django-rest-framework

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
base_django_rest_framework/admin/: user.py
base_django_rest_framework/apps/: __init__.py
base_django_rest_framework/conf/: __init__.py
base_django_rest_framework/fixtures/: user.json
base_django_rest_framework/fixtures/oauth2/: client.json  token.json
base_django_rest_framework/management/commands/: create_oauth2_client.py  delete_expired_oauth2_tokens.py  delete_revoked_oauth2_tokens.py
base_django_rest_framework/managers/: user.py
base_django_rest_framework/managers/oauth2/: token.py
base_django_rest_framework/migrations/: 0001_initial.py
base_django_rest_framework/models/: user.py
base_django_rest_framework/permissions/: __init__.py  model.py  user.py
base_django_rest_framework/serializers/: model.py  user.py
base_django_rest_framework/signals/: __init__.py  user.py
base_django_rest_framework/templates/base_django_rest_framework/: action.html
base_django_rest_framework/urls/oauth2/: client.py  token.py
base_django_rest_framework/views/: user.py
base_django_rest_framework/views/oauth2/: client.py  token.py
example/: local_settings.py.example  settings.py  urls.py
tests/: __init__.py  test_user.py
tests/oauth2/: test_client.py  test_token.py
